# kaggle-mcp-research

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
examples/: example_research_session.md
src/kaggle_mcp/: __init__.py  __main__.py  config.py  server.py
src/kaggle_mcp/tools/: __init__.py  analysis.py  deep_research.py  evaluation.py  huggingface.py  kaggle.py  notebook.py  research.py  zip_processor.py
tests/: conftest.py  test_analysis_and_notebook.py  test_credentials.py  test_deep_research.py  test_evaluation_tools.py
